MB-53230 load factor of query node
   Max of one of the following
       Based on Servicers load
            queued request exceeds number of servicers it considered Servicers intensive

       CPU usage
            More than 80% CPU usage is CPU intensive

       Memory Usage
            More than 80% Memory usage is Memory intensive
            In the absence of node quota, 50% system memory is considered node quota

Change-Id: I07d3e51a7fa4a9e883020c5f85d493a808bb3244
Reviewed-on: https://review.couchbase.org/c/query/+/176739
Reviewed-by: Donald Haggart <donald.haggart@couchbase.com>
Reviewed-by: Marco Greco <marco.greco@couchbase.com>
Tested-by: Sitaram Vemulapalli <sitaram.vemulapalli@couchbase.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -66,8 +66,8 @@ IF (NOT CBQ_ONLY)
 
   GET_FILENAME_COMPONENT (CURL_LIBRARY_DIR "${CURL_LIBRARIES}" DIRECTORY)
 
-  SET(CGO_INCLUDE_DIRS "${CURL_INCLUDE_DIR}")
-  SET(CGO_LIBRARY_DIRS "${CURL_LIBRARY_DIR}")
+  SET(CGO_INCLUDE_DIRS "${CURL_INCLUDE_DIR}";${sigar_SOURCE_DIR}/include)
+  SET(CGO_LIBRARY_DIRS "${CURL_LIBRARY_DIR};${sigar_BINARY_DIR}/src")
 
   IF (BUILD_ENTERPRISE)
     find_path(NEWEVAL_INCLUDE_DIR worker.h
@@ -84,6 +84,7 @@ IF (NOT CBQ_ONLY)
     GOVERSION ${GOVERSION}
     GOTAGS ${_gotags})
 
+  ADD_DEPENDENCIES (cbq-engine sigar)
   IF (BUILD_ENTERPRISE)
     ADD_DEPENDENCIES (cbq-engine jseval)
   ENDIF ()
