MB-54000 Use centralize Go version
Change-Id: Ia2f8de09c2b78bfdeb88aedb63ef5105d3f290b6
Reviewed-on: https://review.couchbase.org/c/query/+/180874
Well-Formed: Restriction Checker
Reviewed-by: Donald Haggart <donald.haggart@couchbase.com>
Tested-by: Sitaram Vemulapalli <sitaram.vemulapalli@couchbase.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -25,7 +25,9 @@ ELSE (BUILD_ENTERPRISE)
     SET (_gotags "community")
 ENDIF(BUILD_ENTERPRISE)
 
-SET (GOVERSION 1.11.4)
+#Use centralize Go version
+#SET (GOVERSION 1.18)
+
 SET (LDFLAGS)
 IF (APPLE)
   # Suppress warning from FindCouchbaseGo
@@ -40,7 +42,7 @@ IF (APPLE)
 ENDIF ()
 
 IF (NOT CBQ_ONLY)
-  GoYacc (GOVERSION 1.7.6 TARGET n1ql-yacc YFILE "${PROJECT_SOURCE_DIR}/parser/n1ql/n1ql.y")
+  GoYacc (TARGET n1ql-yacc YFILE "${PROJECT_SOURCE_DIR}/parser/n1ql/n1ql.y")
 
   GET_FILENAME_COMPONENT (CURL_LIBRARY_DIR "${CURL_LIBRARIES}" DIRECTORY)
   GoInstall (TARGET cbq-engine PACKAGE github.com/couchbase/query/server/cbq-engine
