--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -57,13 +57,12 @@ IF(WIN32)
     ENDIF()
 ENDIF()
 
+GET_FILENAME_COMPONENT (CURL_LIBRARY_DIR "${CURL_LIBRARIES}" DIRECTORY)
+SET(CGO_INCLUDE_DIRS "${CURL_INCLUDE_DIR};${sigar_SOURCE_DIR}/include")
+SET(CGO_LIBRARY_DIRS "${CURL_LIBRARY_DIR};${sigar_BINARY_DIR}/src")
+
 IF (NOT CBQ_ONLY)
   GoYacc (GOVERSION 1.19 TARGET n1ql-yacc YFILE "${PROJECT_SOURCE_DIR}/parser/n1ql/n1ql.y")
-
-  GET_FILENAME_COMPONENT (CURL_LIBRARY_DIR "${CURL_LIBRARIES}" DIRECTORY)
-
-  SET(CGO_INCLUDE_DIRS "${CURL_INCLUDE_DIR};${sigar_SOURCE_DIR}/include")
-  SET(CGO_LIBRARY_DIRS "${CURL_LIBRARY_DIR};${sigar_BINARY_DIR}/src")
 
   IF (BUILD_ENTERPRISE)
     find_path(NEWEVAL_INCLUDE_DIR worker.h
@@ -90,4 +89,6 @@ ENDIF (NOT CBQ_ONLY)
 GoModBuild (TARGET cbq PACKAGE github.com/couchbase/query/shell/cbq
   INSTALL_PATH bin
   GOVERSION ${GOVERSION}
+  CGO_INCLUDE_DIRS "${CGO_INCLUDE_DIRS}"
+  CGO_LIBRARY_DIRS "${CGO_LIBRARY_DIRS}"
   LDFLAGS "-X github.com/couchbase/query/shell/cbq/command.SHELL_VERSION=${PRODUCT_VERSION}")
