--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -62,7 +62,7 @@ IF (NOT CBQ_ONLY)
 
   GET_FILENAME_COMPONENT (CURL_LIBRARY_DIR "${CURL_LIBRARIES}" DIRECTORY)
 
-  SET(CGO_INCLUDE_DIRS "${CURL_INCLUDE_DIR}";${sigar_SOURCE_DIR}/include)
+  SET(CGO_INCLUDE_DIRS "${CURL_INCLUDE_DIR};${sigar_SOURCE_DIR}/include")
   SET(CGO_LIBRARY_DIRS "${CURL_LIBRARY_DIR};${sigar_BINARY_DIR}/src")
 
   IF (BUILD_ENTERPRISE)
