MB-58902: CB_BUILD_FAISS -> CB_USE_FAISS
With: https://review.couchbase.org/c/tlm/+/200167
Change-Id: Ic1ca12288c8c5cfed0a0a1943720dcbf523e1983
Reviewed-on: https://review.couchbase.org/c/query/+/200529
Reviewed-by: Chris Hillery <ceej@couchbase.com>
Tested-by: Abhi Dangeti <abhinav@couchbase.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -59,7 +59,7 @@ IF (NOT CBQ_ONLY)
     LIST(PREPEND CGO_INCLUDE_DIRS "${NEWEVAL_INCLUDE_DIR}")
     LIST(APPEND _extra_deps jseval)
 
-    IF (CB_BUILD_FAISS)
+    IF (CB_USE_FAISS)
       LIST(APPEND _extra_deps faiss_c)
       SET(_gotags "${_gotags} vectors")
     ENDIF ()
