MB-24172 finderr revisions
Change-Id: I4069ddb6bccff3b247e1252ac289e5a2b9b83ec8
Reviewed-on: https://review.couchbase.org/c/query/+/204685
Tested-by: Sitaram Vemulapalli <sitaram.vemulapalli@couchbase.com>
Reviewed-by: Sitaram Vemulapalli <sitaram.vemulapalli@couchbase.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -82,4 +82,10 @@ GoModBuild (TARGET cbq PACKAGE github.com/couchbase/query/shell/cbq
   CGO_LIBRARY_DIRS "${CGO_LIBRARY_DIRS}"
   LDFLAGS "-X github.com/couchbase/query/shell/cbq/command.SHELL_VERSION=${PRODUCT_VERSION}")
 
+GoModBuild (TARGET finderr PACKAGE github.com/couchbase/query/finderr
+  INSTALL_PATH bin
+  GOVERSION ${GOVERSION}
+  CGO_INCLUDE_DIRS "${CGO_INCLUDE_DIRS}"
+  CGO_LIBRARY_DIRS "${CGO_LIBRARY_DIRS}")
+
 AddMetricsMetadata (JSON etc/metrics_metadata.json COMPONENT n1ql)
