MB-60913: Jemalloc for FTS
- Add dependency to jemalloc_noprefix library for EE builds of FTS.
- Use the new `jemalloc` go-tag to set jemalloc's runtime configuration and linking.

Change-Id: I3e5bb8150e10a4d640a8c3e22f6e5a6bf090ea82
Reviewed-on: https://review.couchbase.org/c/query/+/208200
Reviewed-by: Abhi Dangeti <abhinav@couchbase.com>
Reviewed-by: Donald Haggart <donald.haggart@couchbase.com>
Tested-by: Rahul Rampure <rahul.rampure@couchbase.com>
Well-Formed: Restriction Checker

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -60,8 +60,8 @@ IF (NOT CBQ_ONLY)
     LIST(APPEND _extra_deps jseval)
 
     IF (CB_USE_FAISS)
-      LIST(APPEND _extra_deps faiss_c)
-      SET(_gotags "${_gotags} vectors")
+      LIST(APPEND _extra_deps Jemalloc::noprefix faiss_c)
+      SET(_gotags "${_gotags} jemalloc vectors")
     ENDIF ()
   ENDIF (BUILD_ENTERPRISE)
 
