MB-61482: Add cbq to standalone-tools package
Change-Id: I042490059c98db153966b2530da5fcb1409ebb6a
Reviewed-on: https://review.couchbase.org/c/query/+/208617
Reviewed-by: Donald Haggart <donald.haggart@couchbase.com>
Well-Formed: Restriction Checker
Tested-by: Donald Haggart <donald.haggart@couchbase.com>
Tested-by: Chris Hillery <ceej@couchbase.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -76,7 +76,7 @@ IF (NOT CBQ_ONLY)
 ENDIF (NOT CBQ_ONLY)
 
 GoModBuild (TARGET cbq PACKAGE github.com/couchbase/query/shell/cbq
-  INSTALL_PATH bin
+  INSTALL_PATH bin ADD_TO_TOOLS
   GOVERSION ${GOVERSION}
   CGO_INCLUDE_DIRS "${CGO_INCLUDE_DIRS}"
   CGO_LIBRARY_DIRS "${CGO_LIBRARY_DIRS}"
