--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -87,6 +87,7 @@ ENDIF (NOT CBQ_ONLY)
 
 GoModBuild (TARGET cbq PACKAGE github.com/couchbase/query/shell/cbq
   INSTALL_PATH bin
+  ALT_INSTALL_PATHS ${TOOLS_INSTALL_PREFIX}/bin
   GOVERSION ${GOVERSION})
 
 INSTALL (FILES etc/metrics_metadata.json DESTINATION "etc/couchbase/n1ql")
