CBD-5997: GoYacc() no longer requires a GOVERSION arg
Change-Id: I7346b1cbc66fc572bd181bf3c89ac6ec0fd93932
Reviewed-on: https://review.couchbase.org/c/query/+/214351
Reviewed-by: Sitaram Vemulapalli <sitaram.vemulapalli@couchbase.com>
Tested-by: Sitaram Vemulapalli <sitaram.vemulapalli@couchbase.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -50,7 +50,7 @@ SET(CGO_INCLUDE_DIRS)
 SET(CGO_LIBRARY_DIRS)
 
 IF (NOT CBQ_ONLY)
-  GoYacc (GOVERSION SUPPORTED_NEWER TARGET n1ql-yacc YFILE "${PROJECT_SOURCE_DIR}/parser/n1ql/n1ql.y")
+  GoYacc (TARGET n1ql-yacc YFILE "${PROJECT_SOURCE_DIR}/parser/n1ql/n1ql.y")
 
   IF (BUILD_ENTERPRISE)
     find_path(NEWEVAL_INCLUDE_DIR worker.h
