--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -60,8 +60,13 @@ IF (NOT CBQ_ONLY)
     LIST(APPEND _extra_deps jseval)
 
     IF (CB_USE_FAISS)
-      LIST(APPEND _extra_deps Jemalloc::noprefix faiss_c)
-      SET(_gotags "${_gotags} jemalloc vectors")
+      IF (WIN32)
+        LIST(APPEND _extra_deps faiss_c)
+        SET(_gotags "${_gotags} vectors")
+      ELSE ()
+        LIST(APPEND _extra_deps Jemalloc::noprefix faiss_c)
+        SET(_gotags "${_gotags} jemalloc vectors")
+      ENDIF()
     ENDIF ()
   ENDIF (BUILD_ENTERPRISE)
 
