--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -60,10 +60,7 @@ IF (NOT CBQ_ONLY)
     LIST(APPEND _extra_deps jseval)
 
     IF (CB_USE_FAISS)
-      IF (WIN32)
-        LIST(APPEND _extra_deps faiss_c)
-        SET(_gotags "${_gotags} vectors")
-      ELSE ()
+      IF (NOT WIN32)
         LIST(APPEND _extra_deps Jemalloc::noprefix faiss_c)
         SET(_gotags "${_gotags} jemalloc vectors")
       ENDIF()
