MB-62634: [morpheus] Re-enable vector search on windows
This reverts commit 3c1beaaf7f42b1a9cd74490d2e091bf41a845848.

Change-Id: Ib1a7ed74337bf71d706e5de3534200f63e8a8994
Reviewed-on: https://review.couchbase.org/c/query/+/219533
Tested-by: Abhi Dangeti <abhinav@couchbase.com>
Reviewed-by: Abhi Dangeti <abhinav@couchbase.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -60,7 +60,10 @@ IF (NOT CBQ_ONLY)
     LIST(APPEND _extra_deps jseval)
 
     IF (CB_USE_FAISS)
-      IF (NOT WIN32)
+      IF (WIN32)
+        LIST(APPEND _extra_deps faiss_c)
+        SET(_gotags "${_gotags} vectors")
+      ELSE ()
         LIST(APPEND _extra_deps Jemalloc::noprefix faiss_c)
         SET(_gotags "${_gotags} jemalloc vectors")
       ENDIF()
