CBD-6269: Fix up go-mod-tidy issues
- Call new `GoModTidySetup()` macro
- Add `replace` directive for eventing

Change-Id: I443654c3951cf4b1038e0563c5a9aae62bf5b524
Reviewed-on: https://review.couchbase.org/c/query/+/224888
Reviewed-by: Sitaram Vemulapalli <sitaram.vemulapalli@couchbase.com>
Tested-by: Chris Hillery <ceej@couchbase.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -93,3 +93,5 @@ GoModBuild (TARGET finderr PACKAGE github.com/couchbase/query/finderr
   CGO_LIBRARY_DIRS "${CGO_LIBRARY_DIRS}")
 
 AddMetricsMetadata (JSON etc/metrics_metadata.json COMPONENT n1ql)
+
+GoModTidySetup()
